# vs_bug_generated_files

./: CMakeLists.txt  test.cpp
